[gd_scene load_steps=3 format=3 uid="uid://bin6wnaw5ta86"]

[ext_resource type="Script" uid="uid://bntfr8123qk1s" path="res://map/transition.gd" id="1_6hs4f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6hs4f"]
size = Vector2(7, 219)

[node name="Transition" type="Area2D"]
script = ExtResource("1_6hs4f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -109.5)
shape = SubResource("RectangleShape2D_6hs4f")

[node name="LeftEntry" type="Node2D" parent="."]
position = Vector2(-68, 0)

[node name="RightEntry" type="Node2D" parent="."]
position = Vector2(68, 0)

[connection signal="body_entered" from="." to="." method="_on_transition_entered"]
